2010-01-02  Karl Fogel  <kfogel@red-bean.com>

	* lisp/bookmark.el (bookmark-bmenu-marks-width): Define to 1, not 2.
	(bookmark-bmenu-list, bookmark-bmenu-bookmark): Calculate property
	positions by using `bookmark-bmenu-marks-width', instead of hardcoding.
	This fixes the `bookmark-bmenu-execute-deletions' bug reported here:

	http://lists.gnu.org/archive/html/emacs-devel/2009-12/msg00819.html
	From: Sun Yijiang <sunyijiang {_AT_} gmail.com>
	To: emacs-devel {_AT_} gnu.org
	Subject: bookmark.el bug report
	Date: Mon, 28 Dec 2009 14:19:16 +0800
	Message-ID: 5065e2900912272219y3734fc9fsdaee41167ef99ad7@mail.gmail.com

2010-01-02  Karl Fogel  <kfogel@red-bean.com>

	* bookmark.el: Improvements suggested by Drew Adams:
	(bookmark-bmenu-ensure-position): New name for
	`bookmark-bmenu-check-position'.  Just ensure the position,
	don't return any meaningful value.
	(bookmark-bmenu-header-height, bookmark-bmenu-marks-width):
	New constants.

2010-01-02  Juanma Barranquero  <lekktu@gmail.com>

	* bookmark.el (bookmarks-already-loaded): Doc fix (don't use `iff').
	(bookmark-yank-point, bookmark-bmenu-check-position):
	Fix typos in docstrings.
	(bookmark-save-flag, bookmark-bmenu-toggle-filenames)
	(bookmark-name-from-full-record, bookmark-get-position)
	(bookmark-set-position, bookmark-set, bookmark-handle-bookmark)
	(bookmark-delete, bookmark-save, bookmark-save, bookmark-bmenu-mode):
	Remove useless quoting of parenthesis, etc. in docstrings.

	* ediff-mult.el (ediff-prepare-meta-buffer): Fix typo in help message.
	(ediff-append-custom-diff): Fix typo in error message.
	(ediff-meta-mark-equal-files): Fix typos in messages.

	* mpc.el (mpc-playlist-delete): Fix typo in error messages.

	* cedet/semantic/db-typecache.el (semanticdb-typecache-find-default):
	Fix typo in docstring.

	* net/imap-hash.el (imap-hash-make): Doc fix.
	(imap-hash-test): Fix typo in error message; reflow docstring.
	(imap-hash-p, imap-hash-get, imap-hash-put, imap-hash-make-message)